fix overflow on sidepanels

--- a/src/components/SidePanels/SidePanels.styl
+++ b/src/components/SidePanels/SidePanels.styl
@@ -1,6 +1,5 @@
 .sidepanels
   height 100%
-  overflow hidden
   position relative
 
   &__content
